--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@privy-io/react-auth": "^2.8.2",
+    "ethers": "^6.13.5",
     "framer-motion": "^12.6.3",
+    "groq-sdk": "^0.19.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
