--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "ethers": "^6.13.5",
     "framer-motion": "^12.6.3",
     "groq-sdk": "^0.19.0",
+    "marked": "^15.0.7",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
